botao mover para "em curso"

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <button type="button" id="button__adicionar">Adicionar</button>
     <button class="button__excluir" type="button"
     id="button__excluir">Excluir</button>
+    <button id="button_em_Curso">Mover para Em curso</button>
     <script src="/script.js"></script>
 
     
